--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Gym Warriors - Perfil</title>
-    <link rel="stylesheet" href="style/home.css" />
+    <link rel="stylesheet" href="style/perfil.css" />
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
