correção dos tab active

--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -30,7 +30,7 @@
 
     <!-- 🟢 Barra de Navegação Inferior -->
     <nav class="tab-bar">
-        <a href="home.html" style="text-decoration: none;" class="tab active">
+        <a href="home.html" style="text-decoration: none;" class="tab">
             <ion-icon name="home-outline"></ion-icon>
             <span>Home</span>
         </a>
@@ -42,7 +42,7 @@
             <ion-icon name="stats-chart-outline"></ion-icon>
             <span>Progresso</span>
         </a>
-        <a href="perfil.html" style="text-decoration: none;" class="tab">
+        <a href="perfil.html" style="text-decoration: none;" class="tab active">
             <ion-icon name="person-outline"></ion-icon>
             <span>Perfil</span>
         </a>
