--- a/paginas/treinos.html
+++ b/paginas/treinos.html
@@ -26,11 +26,11 @@
 
 <!-- 🟢 Barra de Navegação Inferior -->
 <nav class="tab-bar">
-  <a href="home.html" style="text-decoration: none;" class="tab active">
+  <a href="home.html" style="text-decoration: none;" class="tab">
     <ion-icon name="home-outline"></ion-icon>
     <span>Home</span>
   </a>
-  <a href="treinos.html" style="text-decoration: none;" class="tab">
+  <a href="treinos.html" style="text-decoration: none;" class="tab active">
     <ion-icon name="barbell-outline"></ion-icon>
     <span>Treinos</span>
   </a>
