--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gym Warriors - Perfil</title>
     <link rel="stylesheet" href="style/perfil.css" />
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
