--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 
 </head>
-
+    <!-- quem apagar e gay (não vale subtituir, desfazer cortar e não salvar) -->
 <body>
   <link rel="icon" type="image/png" href="assets/logo.png">
   <div>
