--- a/paginas/treinos.html
+++ b/paginas/treinos.html
@@ -12,7 +12,18 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 </head>
+
 <body>
+  
+  <!-- ✅ Modal de Alerta Estilizado -->
+  <div id="customAlert" class="modal-alert" style="display: none;">
+    <div class="modal-content">
+      <p id="customAlertMessage"></p>
+      <button onclick="closeCustomAlert()">Confirmar</button>
+    </div>
+  </div>
+
+  
   <main class="container">
     <h1>Treino do Dia</h1>
     <h2 id="treinoDoDia">Carregando...</h2>
@@ -59,9 +70,9 @@
     const container = document.getElementById("exerciciosContainer");
 
     const mapaTreinos = {
-      "Treino A": ["peito", "triceps"],
-      "Treino B": ["costas", "biceps"],
-      "Treino C": ["pernas", "ombros"]
+      "Peito e Triceps": ["peito", "triceps"],
+      "Costas e Biceps": ["costas", "biceps"],
+      "Pernas e Ombros": ["pernas", "ombros"]
     };
 
     // ================================
@@ -75,17 +86,21 @@
     { equipamento: "Kettlebell", exercicio: "Goblet squat", foco: ["Funcional", "Mobilidade"] },
     { equipamento: "Elástico", exercicio: "Agachamento com elástico", foco: ["Mobilidade", "Resistência"] },
     { equipamento: "Esteira", exercicio: "Caminhada inclinada", foco: ["Aeróbico", "Resistência"] },
+    
     { equipamento: "Esteira", exercicio: "Corrida leve", foco: ["Aeróbico", "Resistência"] },
     { equipamento: "Corda", exercicio: "Saltos simples", foco: ["Coordenação", "Resistência"] },
-    { equipamento: "Corda", exercicio: "Double unders", foco: ["Coordenação", "Explosão"] },
-    { equipamento: "Corpo", exercicio: "Pistol squat", foco: ["Força", "Controle corporal", "Equilíbrio"] },
-    { equipamento: "Corda naval", exercicio: "Ondas com agachamento", foco: ["Força", "Explosão", "Resistência"] },
+    { equipamento: "Corda", exercicio: "Double unders", foco: ["Coordenação", ] },
+    { equipamento: "Corpo", exercicio: "Pistol squat", foco: ["Força", , "Equilíbrio"] },
+    { equipamento: "Corda naval", exercicio: "Ondas com agachamento", foco: ["Força", , "Resistência"] },
     { equipamento: "Barra", exercicio: "Stiff", foco: ["Crescimento", "Força"] },
     { equipamento: "Halteres", exercicio: "Afundo búlgaro", foco: ["Força", "Equilíbrio"] },
     { equipamento: "Kettlebell", exercicio: "Deadlift unilateral", foco: ["Funcional", "Mobilidade", "Força"] },
     { equipamento: "Corpo", exercicio: "Ponte de glúteo", foco: ["Resistência", "Crescimento"] },
     { equipamento: "Elástico", exercicio: "Cadeira extensora com elástico", foco: ["Mobilidade", "Resistência"] },
-    { equipamento: "Corda naval", exercicio: "Saltos laterais com corda", foco: ["Aeróbico", "Explosão"] }
+    { equipamento: "Corda naval", exercicio: "Saltos laterais com corda", foco: ["Aeróbico", ] },
+    { equipamento: "Halteres", exercicio: "Agachamento sumô", foco: ["Força", "Crescimento"] },
+    { equipamento: "Kettlebell", exercicio: "Swing", foco: [, "Funcional"] },
+    { equipamento: "Corpo", exercicio: "Subida no banco", foco: ["Resistência", "Força"] }
   ],
 
   ombros: [
@@ -94,15 +109,19 @@
     { equipamento: "Barra", exercicio: "Desenvolvimento em pé", foco: ["Força", "Crescimento"] },
     { equipamento: "Elástico", exercicio: "Elevação frontal", foco: ["Mobilidade", "Resistência"] },
     { equipamento: "Kettlebell", exercicio: "Press alternado", foco: ["Funcional", "Força"] },
-    { equipamento: "Kettlebell", exercicio: "Turkish get-up", foco: ["Mobilidade", "Controle corporal", "Funcional"] },
+    { equipamento: "Kettlebell", exercicio: "Turkish get-up", foco: ["Mobilidade", , "Funcional"] },
     { equipamento: "Corpo", exercicio: "Pike push-up", foco: ["Força", "Resistência"] },
-    { equipamento: "Corpo", exercicio: "Handstand push-up", foco: ["Força", "Controle corporal", "Explosão"] },
+    { equipamento: "Corpo", exercicio: "Handstand push-up", foco: ["Força", , ] },
     { equipamento: "Corda naval", exercicio: "Golpes laterais", foco: ["Funcional", "Resistência"] },
-    { equipamento: "Halteres", exercicio: "Elevação posterior", foco: ["Crescimento", "Isolamento"] },
-    { equipamento: "Barra", exercicio: "Push press", foco: ["Força", "Explosão"] },
-    { equipamento: "Elástico", exercicio: "Rotação externa", foco: ["Mobilidade", "Prevenção de lesões"] },
-    { equipamento: "Corpo", exercicio: "Planche lean", foco: ["Controle corporal", "Força"] },
-    { equipamento: "Corda naval", exercicio: "Golpes diagonais", foco: ["Funcional", "Explosão"] }
+    { equipamento: "Halteres", exercicio: "Elevação posterior", foco: ["Crescimento", ] },
+    { equipamento: "Barra", exercicio: "Push press", foco: ["Força", ] },
+    { equipamento: "Elástico", exercicio: "Rotação externa", foco: ["Mobilidade", ] },
+    { equipamento: "Corpo", exercicio: "Planche lean", foco: [, "Força"] },
+    { equipamento: "Corda naval", exercicio: "Golpes diagonais", foco: ["Funcional", ] },
+    { equipamento: "Halteres", exercicio: "Arnold press", foco: ["Força", "Crescimento"] },
+    { equipamento: "Kettlebell", exercicio: "Clean and press", foco: [, "Funcional"] },
+    { equipamento: "Corpo", exercicio: "Dive bomber push-up", foco: [, "Força"] },
+    { equipamento: "Elástico", exercicio: "Face pull com elástico", foco: ["Mobilidade", ] }
   ],
 
   costas: [
@@ -112,30 +131,37 @@
     { equipamento: "Elástico", exercicio: "Remada sentada", foco: ["Resistência", "Mobilidade"] },
     { equipamento: "Elástico", exercicio: "Puxada alta", foco: ["Funcional", "Mobilidade"] },
     { equipamento: "Kettlebell", exercicio: "Remada com kettlebell", foco: ["Funcional", "Força"] },
-    { equipamento: "Corpo", exercicio: "Muscle-up", foco: ["Força", "Explosão", "Controle corporal"] },
+    { equipamento: "Corpo", exercicio: "Muscle-up", foco: ["Força", , ] },
     { equipamento: "Corda naval", exercicio: "Ondas alternadas", foco: ["Resistência", "Força"] },
-    { equipamento: "Barra", exercicio: "Levantamento terra", foco: ["Força", "Crescimento", "Explosão"] },
+    { equipamento: "Barra", exercicio: "Levantamento terra", foco: ["Força", "Crescimento", ] },
     { equipamento: "Halteres", exercicio: "Pullover", foco: ["Crescimento", "Resistência"] },
-    { equipamento: "Elástico", exercicio: "Face pull", foco: ["Mobilidade", "Prevenção de lesões"] },
+    { equipamento: "Elástico", exercicio: "Face pull", foco: ["Mobilidade", ] },
     { equipamento: "Corpo", exercicio: "Superman", foco: ["Resistência", "Mobilidade"] },
-    { equipamento: "Kettlebell", exercicio: "High pull", foco: ["Funcional", "Explosão"] }
+    { equipamento: "Kettlebell", exercicio: "High pull", foco: ["Funcional", ] },
+    { equipamento: "Halteres", exercicio: "Remada invertida", foco: ["Força", ] },
+    { equipamento: "Corpo", exercicio: "Prancha com puxada", foco: ["Resistência", ] },
+    { equipamento: "Corda naval", exercicio: "Ondas laterais", foco: [, "Funcional"] },
+    { equipamento: "Corpo", exercicio: "Superman", foco: [, "Força, Crescimento"] }
   ],
 
   peito: [
     { equipamento: "Halteres", exercicio: "Supino reto leve", foco: ["Crescimento", "Força"] },
     { equipamento: "Halteres", exercicio: "Supino inclinado", foco: ["Força", "Crescimento"] },
-    { equipamento: "Barra", exercicio: "Supino pesado", foco: ["Crescimento", "Força", "Explosão"] },
-    { equipamento: "Elástico", exercicio: "Crucifixo com elástico", foco: ["Mobilidade", "Isolamento"] },
+    { equipamento: "Barra", exercicio: "Supino pesado", foco: ["Crescimento", "Força", ] },
+    { equipamento: "Elástico", exercicio: "Crucifixo com elástico", foco: ["Mobilidade", ] },
     { equipamento: "Kettlebell", exercicio: "Supino no chão", foco: ["Funcional", "Força"] },
     { equipamento: "Corpo", exercicio: "Flexão inclinada", foco: ["Resistência", "Funcional"] },
     { equipamento: "Corpo", exercicio: "Flexão tradicional", foco: ["Força", "Crescimento"] },
-    { equipamento: "Corpo", exercicio: "Flexão com palmas", foco: ["Explosão", "Coordenação"] },
+    { equipamento: "Corpo", exercicio: "Flexão com palmas", foco: [, "Coordenação"] },
     { equipamento: "Corda naval", exercicio: "Golpes cruzados", foco: ["Funcional", "Resistência"] },
-    { equipamento: "Halteres", exercicio: "Crucifixo reto", foco: ["Crescimento", "Isolamento"] },
+    { equipamento: "Halteres", exercicio: "Crucifixo reto", foco: ["Crescimento", ] },
     { equipamento: "Barra", exercicio: "Supino declinado", foco: ["Força", "Crescimento"] },
     { equipamento: "Elástico", exercicio: "Press de peito", foco: ["Resistência", "Mobilidade"] },
-    { equipamento: "Corpo", exercicio: "Flexão arqueada", foco: ["Mobilidade", "Controle corporal"] },
-    { equipamento: "Kettlebell", exercicio: "Floor press", foco: ["Funcional", "Força"] }
+    { equipamento: "Corpo", exercicio: "Flexão arqueada", foco: ["Mobilidade", ] },
+    { equipamento: "Kettlebell", exercicio: "Floor press", foco: ["Funcional", "Força"] },
+    { equipamento: "Corpo", exercicio: "Flexão diamante", foco: [, "Força"] },
+    { equipamento: "Halteres", exercicio: "Pullover com halteres", foco: ["Mobilidade", "Crescimento"] },
+    { equipamento: "Corda", exercicio: "Saltos explosivos", foco: ["Aeróbico", ] }
   ],
 
   biceps: [
@@ -145,65 +171,95 @@
     { equipamento: "Elástico", exercicio: "Rosca com elástico", foco: ["Mobilidade", "Resistência"] },
     { equipamento: "Kettlebell", exercicio: "Rosca neutra", foco: ["Funcional", "Força"] },
     { equipamento: "Corpo", exercicio: "Chin-up", foco: ["Crescimento", "Força"] },
-    { equipamento: "Halteres", exercicio: "Rosca concentrada", foco: ["Crescimento", "Isolamento"] },
+    { equipamento: "Halteres", exercicio: "Rosca concentrada", foco: ["Crescimento", ] },
     { equipamento: "Barra", exercicio: "Rosca 21", foco: ["Resistência", "Crescimento"] },
     { equipamento: "Elástico", exercicio: "Rosca inversa", foco: ["Mobilidade", "Resistência"] },
-    { equipamento: "Kettlebell", exercicio: "Rosca unilateral", foco: ["Funcional", "Resistência"] }
+    { equipamento: "Kettlebell", exercicio: "Rosca unilateral", foco: ["Funcional", "Resistência"] },
+    { equipamento: "Corpo", exercicio: "Isometria de bíceps", foco: ["Força", ] },
+    { equipamento: "Halteres", exercicio: "Rosca inclinada", foco: ["Crescimento", ] }
   ],
 
   triceps: [
-    { equipamento: "Halteres", exercicio: "Coice de tríceps", foco: ["Resistência", "Isolamento"] },
+    { equipamento: "Halteres", exercicio: "Coice de tríceps", foco: ["Resistência", ] },
     { equipamento: "Halteres", exercicio: "Tríceps francês", foco: ["Crescimento", "Força"] },
     { equipamento: "Barra", exercicio: "Tríceps testa", foco: ["Força", "Crescimento"] },
     { equipamento: "Elástico", exercicio: "Extensão com elástico", foco: ["Mobilidade", "Resistência"] },
     { equipamento: "Kettlebell", exercicio: "Extensão acima da cabeça", foco: ["Funcional", "Força"] },
-    { equipamento: "Corpo", exercicio: "Paralelas (dips)", foco: ["Força", "Crescimento", "Controle corporal"] },
-    { equipamento: "Corda naval", exercicio: "Ondas curtas", foco: ["Resistência", "Explosão"] },
-    { equipamento: "Halteres", exercicio: "Kickback unilateral", foco: ["Resistência", "Isolamento"] },
+    { equipamento: "Corpo", exercicio: "Paralelas (dips)", foco: ["Força", "Crescimento", ] },
+    { equipamento: "Corda naval", exercicio: "Ondas curtas", foco: ["Resistência", ] },
+    { equipamento: "Halteres", exercicio: "Kickback unilateral", foco: ["Resistência", ] },
     { equipamento: "Barra", exercicio: "Fechamento de supino", foco: ["Força", "Crescimento"] },
     { equipamento: "Corpo", exercicio: "Flexão diamante", foco: ["Crescimento", "Resistência"] },
-    { equipamento: "Elástico", exercicio: "Tríceps pull-down", foco: ["Resistência", "Mobilidade"] }
+    { equipamento: "Elástico", exercicio: "Tríceps pull-down", foco: ["Resistência", "Mobilidade"] },
+    { equipamento: "Corpo", exercicio: "Extensão em banco", foco: ["Força", ] },
+    { equipamento: "Kettlebell", exercicio: "Tríceps kickback com kettlebell", foco: ["Funcional", "Força"] }
   ]
 };
+
 
     // ================================
     // 🔹 CALCULAR SÉRIES E REPETIÇÕES
     // ================================
-    function calcularTreino(usuario, foco) {
-      const { idade, peso, sexo, objetivo } = usuario;
-      let series = 3, repeticoes = 12;
+  function calcularTreino(usuario, foco) {
+  const { idade, peso, sexo, objetivo } = usuario;
+  let series = 3, repeticoes = 10; // padrão 3x10
 
-      // Ajuste por idade
-      if (idade < 20) repeticoes += 2;
-      if (idade > 40) repeticoes -= 2;
+  // Ajuste por idade (apenas se não for força)
+  if (objetivo !== "Força") {
+    if (idade < 20) repeticoes += 2;
+    if (idade > 40) repeticoes -= 2;
+  }
 
-      // Ajuste por peso
-      if (peso > 85) series += 1;
-      if (peso < 60) repeticoes += 2;
+  // Ajuste por peso (apenas se não for força)
+  if (objetivo !== "Força") {
+    if (peso > 85) series += 1;
+    if (peso < 60) repeticoes += 2;
+  }
 
-      // Ajuste por sexo
-      if (sexo === "masculino") series += 1;
-      else repeticoes += 2;
+  // Ajuste por sexo (apenas se não for força)
+  if (objetivo !== "Força") {
+    if (sexo === "masculino") series += 1;
+    else repeticoes += 2;
+  }
 
-      // Ajuste pelo objetivo principal
-      switch (objetivo) {
-        case "Força": series += 1; repeticoes -= 4; break;
-        case "Crescimento": series += 1; break;
-        case "Resistência": repeticoes += 4; break;
-        case "Funcional": repeticoes += 1; break;
-        case "Mobilidade": series -= 1; repeticoes += 6; break;
-        case "Aeróbico": series -= 1; repeticoes += 8; break;
-      }
+  // Ajuste pelo objetivo principal
+  switch (objetivo) {
+    case "Força":
+      series = 2;        // sempre 3 séries
+      repeticoes -= 2;   // menos repetições
+      break;
+    case "Crescimento":
+      series += 1;       
+      repeticoes = 10;   
+      break;
+    case "Resistência":
+      repeticoes += 6;   
+      break;
+    case "Funcional":
+      repeticoes += 2;   
+      break;
+    case "Mobilidade":
+      series -= 1;       
+      repeticoes += 6;
+      break;
+    case "Aeróbico":
+      series -= 1;
+      repeticoes += 8;
+      break;
+  }
 
-      // Ajuste pelo foco do exercício
-      if (foco.includes(objetivo)) series += 1;
+  // Ajuste pelo foco do exercício
+  if (foco.includes(objetivo)) {
+    if (objetivo === "Força" || objetivo === "Crescimento") series += 1;
+    if (objetivo === "Resistência" || objetivo === "Aeróbico") repeticoes += 2;
+  }
 
-      // Limites
-      series = Math.max(2, Math.min(series, 6));
-      repeticoes = Math.max(6, Math.min(repeticoes, 20));
+  // Limites finais
+  series = Math.max(2, Math.min(series, 6));
+  repeticoes = Math.max(4, Math.min(repeticoes, 20));
 
-      return { series, repeticoes };
-    }
+  return { series, repeticoes };
+}
 
     // ================================
     // 🔹 AUTENTICAÇÃO
@@ -247,37 +303,68 @@
     });
 
     function mostrarExercicios(treinoDoDia) {
-      container.innerHTML = "";
-      const grupos = mapaTreinos[treinoDoDia];
-      let encontrados = 0;
+  container.innerHTML = "";
+  const grupos = mapaTreinos[treinoDoDia];
+  let encontrados = 0;
 
-      grupos.forEach(grupo => {
-        const lista = exercicios[grupo].filter(ex =>
-          equipamentosUsuario.includes(ex.equipamento) &&
-          ex.foco.includes(objetivoUsuario)
-        );
+  grupos.forEach(grupo => {
+    // Filtra os exercícios compatíveis com o objetivo e equipamentos
+    const lista = exercicios[grupo].filter(ex =>
+      equipamentosUsuario.includes(ex.equipamento) &&
+      ex.foco.includes(objetivoUsuario)
+    );
 
-        if (lista.length > 0) {
-          const grupoDiv = document.createElement("div");
-          grupoDiv.innerHTML = `<h3>${grupo.toUpperCase()}</h3>`;
+    // Se não achar suficientes, pega qualquer exercício do grupo
+    const listaFinal = lista.length > 0 ? lista : exercicios[grupo];
 
-          lista.forEach(ex => {
-            const item = document.createElement("div");
-            item.classList.add("exercicio-item");
-            item.innerHTML = `<p><strong>${ex.exercicio}</strong> (${ex.equipamento})</p>`;
-            item.addEventListener("click", () => mostrarDetalhes(ex));
-            grupoDiv.appendChild(item);
-          });
+    // 🔹 Pega apenas os 4 primeiros exercícios aleatórios
+    const selecionados = listaFinal
+      .sort(() => 0.5 - Math.random()) // embaralha
+      .slice(0, 4); // limita a 4
 
-          container.appendChild(grupoDiv);
-          encontrados += lista.length;
-        }
+    if (selecionados.length > 0) {
+      const grupoDiv = document.createElement("div");
+      grupoDiv.innerHTML = `<h3>${grupo.toUpperCase()}</h3>`;
+
+      selecionados.forEach(ex => {
+        const item = document.createElement("div");
+        item.classList.add("exercicio-item");
+        item.innerHTML = `<p><strong>${ex.exercicio}</strong> (${ex.equipamento})</p>`;
+        item.addEventListener("click", () => mostrarDetalhes(ex));
+        grupoDiv.appendChild(item);
       });
 
-      if (encontrados === 0) {
-        container.innerHTML = "<p>Nenhum exercício compatível com seu objetivo e equipamentos.</p>";
-      }
+      container.appendChild(grupoDiv);
+      encontrados += selecionados.length;
     }
+  });
+
+  if (encontrados === 0) {
+    container.innerHTML = "<p>Nenhum exercício compatível com seu objetivo e equipamentos.</p>";
+  }
+}
+
+// ================================
+// 🔹 MODAL DE ALERTA PERSONALIZADO
+// ================================
+function showCustomAlert(message, onConfirm = null) {
+  const modal = document.getElementById("customAlert");
+  const msg = document.getElementById("customAlertMessage");
+  
+  msg.textContent = message;
+  modal.style.display = "flex";
+
+  // Quando o usuário clicar em "Confirmar"
+  const button = modal.querySelector("button");
+  button.onclick = () => {
+    closeCustomAlert();
+    if (typeof onConfirm === "function") onConfirm();
+  };
+}
+
+function closeCustomAlert() {
+  document.getElementById("customAlert").style.display = "none";
+}
 
     // ================================
     // 🔹 DETALHES DO EXERCÍCIO
@@ -289,7 +376,7 @@
         <p>Equipamento: ${ex.equipamento}</p>
         <p>Foco: ${ex.foco.join(", ")}</p>
         <p><strong>${series} séries de ${repeticoes} repetições</strong></p>
-        <button id="btnRealizar">Realizar Exercício</button>
+        <button id="btnRealizar">Finali Exercício</button>
         <button id="btnVoltar">Voltar</button>
       `;
 
@@ -310,7 +397,7 @@
           .collection("progresso")
           .add(registro);
 
-        alert("✅ Exercício registrado com sucesso!");
+        showCustomAlert("✅ Exercício registrado com sucesso!");
         btnProximo.click();
       });
 
